# c2048

./: .gitignore  CMakeLists.txt  README.md
include/: board.h  game.h  render.h  utils.h
include/c2048/: assert.h  board.h  game.h  status.h  utils.h
src/: assert.c  board.c  game.c  main.c  render.c  status.c  utils.c
